tests/regression/error/hw5_error18.nex
fun f(a,b)
{
   var a;
   print (a);
   print (":n");
   print (b);
   print (":n");
}

f(1, 2);
